# bev_memcachefs

./: .cproject  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  handle.c  handle.h  memcachefs.1  memcachefs.c  memcachefs.h
debian/: changelog  control  copyright  rules
